--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -2,27 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     >
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="0dp"
-        android:layout_marginStart="13dp"
-        app:cardCornerRadius="13dp"
-        android:layout_margin="10dp"
-        app:cardElevation="0dp">
-
-        <ImageView
-            android:id="@+id/result_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:scaleType="centerCrop" />
-    </androidx.cardview.widget.CardView>
 
 
     <LinearLayout
@@ -35,7 +17,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_vertical"
-            android:layout_weight="0.7">
+            android:layout_weight="0.7"
+            android:layout_marginStart="20dp">
 
             <TextView
                 android:id="@+id/result_name_text"
@@ -44,8 +27,9 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="Ris #0001"
-                android:textSize="15sp"
+                android:layout_marginTop="20dp"
+                android:text="Titolo"
+                android:textSize="25sp"
                 app:layout_constraintStart_toEndOf="@+id/lesion_image"
                 app:layout_constraintTop_toTopOf="parent"
                 />
@@ -57,8 +41,9 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="Melanocytic Nevi"
-                android:textSize="14sp"
+                android:layout_marginTop="5dp"
+                android:text="Descrizione"
+                android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@+id/lesion_image"
                 app:layout_constraintTop_toTopOf="parent"
                 />
@@ -70,6 +55,8 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:text="25 Marzo 2024"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/lesion_image"
